Add sync-repo command and master/main checkout fallback

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ DISCORD_CLIENT_ID=replace_me
 # DISCORD_GUILD_ID=optional_for_dev_guild_command_registration
 GH_TOKEN=replace_me
 DATABASE_PATH=/data/app.db
+REPOS_ROOT_PATH=/data/repos
 LOG_LEVEL=info
 THREAD_AUTO_ARCHIVE_MINUTES=1440
-
