--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ DATABASE_PATH=/data/app.db
 REPOS_ROOT_PATH=/data/repos
 LOG_LEVEL=info
 THREAD_AUTO_ARCHIVE_MINUTES=1440
+ASK_CONCURRENCY_PER_GUILD=3
+ASK_EXECUTION_TIMEOUT_MS=1200000
